adicionado monitor para computação do tempo médio de incosistência

--- a/ag-simple-monitor/pom.xml
+++ b/ag-simple-monitor/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ag-simple-eventbus</groupId>
-  <artifactId>ag-simple-eventbus</artifactId>
+  <groupId>ag-simple-pglistener</groupId>
+  <artifactId>ag-simple-pglistener</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
 	<dependency>
@@ -12,7 +12,6 @@
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
